style.css
@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Manrope:wght@200..800&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');

:root {
    --primary-color:#000dff;
    --secondary-color:rgb(238, 237, 234);

    --bg-color:#e4e4e4;
    --cream: #f6f3e9;
    
    --body-copy: 1rem;
    --heading-copy: 4rem;

    --spacing: 2rem;
    --vertical: 8rem;
    --primary-font: 'Jost', sans-serif;
}

h1 {
    font-family: (var(--primary-font));
    color: var(--color);
    font-size: var(--heading-copy);
}

hgroup {
    font-family: (var(--primary-font));
    color: var(--secondary-color);
    background-color: var(--primary-color);
    padding-block: calc(var(--spacing)*2);
    padding-left: var(--spacing);
}


.nav {
  display: flex;
  gap: var(--spacing);
  list-style: none;
  justify-content: center;
}
}

a {
    text-decoration: underline;
}

body {
    font-family: sans-serif;
    color: var(--primary-color);
    background-color: var(--secondary-color);
    font-size: var(--body-copy);
    block-size: 100vh;
    display: grid;
    align-items: center;
    
}

main {
    padding-inline:var(--spacing);
    padding-block: var(--vertical);
    display: grid;
    justify-items: center;
}



ul {
    padding-block: var(--spacing);
    gap: var(--spacing);
    display: grid;

}

footer{
    color: var(--secondary-color);
    background-color: var(--primary-color);
    padding-inline: var(--spacing);
    padding-block: calc(var(--spacing)*2);
    display: grid;
    justify-items: center;
}

